--- a/Assets/style.css
+++ b/Assets/style.css
@@ -1,1 +1,14 @@
-/* PENDING */
+/* li:hover{
+    background-color: lightslategray;
+    text-decoration: underline;
+} */
+
+.fiveDayBox {
+    margin: 4% 0 0 66%;
+    display: none;
+}
+
+.currentBox {
+    display: none;
+}
+
